Refactor deprecated code